<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bryan.codetest.homeawaychallenge.DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_height="@dimen/app_bar_height">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView

        android:id="@+id/full_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/main_event_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center|top"
                android:layout_marginTop="10dp"
                android:padding="15dp">

                <TextView
                    android:id="@+id/event_details_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/event_details_date"
                    android:layout_marginBottom="3dp"/>

                <TextView
                    android:id="@+id/event_details_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_details_url"
                    android:textStyle="italic"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/venue_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/venue_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/venue_title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/venue_details_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/venue_details_name"
                    android:textSize="18sp"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/venue_details_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/venue_details_address"/>

                <TextView
                    android:id="@+id/venue_details_address_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/venue_details_address_second"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/stats_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/stats_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prices_title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/stats_details_low"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lowest_price"
                    android:textSize="16sp"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/stats_details_high"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/highest_price"
                    android:textSize="16sp"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/stats_details_average"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/average_price"
                    android:textSize="16sp"
                    android:layout_marginBottom="4dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/performer_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/performer_title_a"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <include layout="@layout/performer_details_list"/>

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_favorited"
        android:layout_gravity="center_vertical|start"
        app:layout_anchorGravity="top|end"
        app:layout_anchor="@id/full_layout"
        android:layout_margin="16dp"
        android:src="@drawable/ic_favorite_border_white_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</android.support.design.widget.CoordinatorLayout>
