<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="15dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/performer_image"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:contentDescription="@string/performer_image"
            android:layout_marginEnd="20dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/performer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/performer_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_date"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>